# kaslcred

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish.yaml  build.yaml  publish.yaml
src/kaslcred/: link.py
tests/: test_link.py
